--- a/wireframe.html
+++ b/wireframe.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>wireframe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="wireframe.css" />
     <script src="main.js"></script>
 </head>
 <body>
     
-              <header class="boxh">header</header>
-          <nav class="boxn">nav</nav>
-                <aside class="boxc">aside</aside>
-                
-                <section class="boxs">section
-                  <article class="boxr">article
-                    <h1 class="boxe">h1,h2,h3</h1>
-                    <p class="boxp">p</p>
-                  </article>
-                </section>
-              </body>
-            <footer class="boxf">footer</footer>
+  <header class="boxh">header</header>
+    <nav class="boxn">nav</nav>
+    <aside class="boxc">aside</aside>       
+ <section class="boxs">section
+   <article class="boxr">article
+      <h1 class="boxe">h1,h2,h3</h1>
+      <p class="boxp">p</p>
+     </article>
+       </section>
+  </body>
+   <footer class="boxf">footer</footer>
 
 </html>
